<resources>
    <string name="app_name" translatable="false">Mobiuz</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="ums_slogan">ОПЕРАТОР СВЯЗИ,\nКАКИМ ОН ДОЛЖЕН БЫТЬ</string>
    <string name="support_service">Служба поддержки</string>
    <string name="call">Позвонить</string>
    <string name="change_language">Смена языка</string>
    <string name="share">Поделиться</string>
    <string name="call_permission_warn">Без доступа на вызов, вы не сможете совершать прямые USSD запросы</string>
    <string name="tariffs">Тарифы</string>
    <string name="balance">Баланс</string>
    <string name="internet_packages">Интернет пакеты</string>
    <string name="service">Услуги</string>
    <string name="talk">Общение</string>
    <string name="lastpayment">Последняя оплата</string>
    <string name="myDisCharge">Мой расход</string>
    <string name="myNumber">Мой номер</string>
    <string name="allMyNumber">Все мои номера</string>
    <string name="RemainTrafBtn">Остаток трафика</string>
    <string name="CheckActServ">Проверка активных услуг</string>
    <string name="sure_confirm">Вы уверены?</string>
    <string name="confirm_ask">Вы действительно хотите перейти на тарифный план:</string>
    <string name="cancel">Отмена</string>
    <string name="more_tariff">Подробно</string>
    <string name="change_tariff">Перейти</string>
    <string name="packages">Пакеты</string>
    <string name="night_packages">Ночные Пакеты</string>
    <string name="night_drive">Ночной Drive</string>
    <string name="news">Новости</string>
    <string name="useful">Полезное</string>
    <string name="batafsil">Подробнее</string>
    <string name="telegram_channel">Mobiuz канал</string>
    <string name="check_internet_traffic">Проверить остаток</string>
    <string name="package_300">Пакет 300 Мб + 75 Мб 12 500 сум</string>
    <string name="package_500">Пакет 500 Мб + 125 Мб 16 500 сум</string>
    <string name="package_1000">Пакет 1000 Мб + 250 Мб 22 000 сум</string>
    <string name="package_2000">Пакет 2000 Мб + 500 Мб 33 000 сум</string>
    <string name="package_3000">Пакет 3000 Мб + 750 Мб 45 000 сум</string>
    <string name="package_5000">Пакет 5000 Мб + 1250 Мб 56 000 сум</string>
    <string name="package_10000">Пакет 10000 Мб + 2500 Мб 84 000 сум</string>
    <string name="package_20000">Пакет 20000 Мб + 5000 Мб 150 000 сум</string>
    <string name="package_30000">Пакет 30000 Мб + 7500 Мб 164 000 сум</string>
    <string name="package_50000">Пакет 50000 Мб + 12500 Мб 252 000 сум</string>
    <string name="night_1000">1000 Мб  5 000 сум</string>
    <string name="night_2000">2000 Мб  9 500 сум</string>
    <string name="night_3000">3000 Мб  12 500 сум</string>
    <string name="night_5000">5000 Мб  17 000 сум</string>
    <string name="night_10000">10000 Мб  22 000 сум</string>
    <string name="night_20000">20000 Мб  33 000 сум</string>
    <string name="night_50000">50000 Мб  44 000 сум</string>
    <string name="confirm_service_ask">Вы действительно хотите подключить данную услугу?</string>
    <string name="confirm_cancel_service_ask">Вы действительно хотите отключить данную услугу?</string>
    <string name="yes_dialog">Да</string>
    <string name="night_drive_warning">Услуга «Ночной DRIVE» позволяет абонентам неограниченно пользоваться интернетом каждую ночь с 0:00 до 8:00</string>
    <string name="drive_1">1 сутка  10 000 сум</string>
    <string name="drive_7">7 суток  45 000 сум</string>
    <string name="drive_30">30 суток 120 000 сум</string>
    <string name="service_mutlaqo_cheksiz_name">Акция «Абсолютный безлимит!»</string>
    <string name="service_mutlaqo_cheksiz_desc">Услуга «Абсолютный безлимит!» представляет собой безлимит на исходящие звонки
        по Узбекистану и ежемесячный пакет 1000 Мб, которые предоставляются в течение трех месяцев с момента подключения услуги./n
        При активации услуги «Абсолютный безлимит!» устанавливается запрет смены тарифа в течение 3 месяцев.
        После истечения полных трех месяцев с момента подключения услуги, - автоматически отключаются и сама услуга,
        и запрет смены тарифа. Для отключение услуги: *165*0#</string>
    <string name="service_promisePayment_name">Обещанный платеж</string>
    <string name="service_promisePayment_desc">Данная услуга позволяет получить на свой счет 12632 сум для дальнейшего использования на услуги связи в счет будущей оплаты, сроком на 3 дня. По истечении срока действия услуги «Обещанный платеж» со счета будет списана сумма равная 14737 сум</string>
    <string name="service_holdCall_name">Ожидание и удержание вызова</string>
    <string name="service_holdCall_desc">Режим ожидания вызова позволяет в процессе разговора с другим абонентом ответить на входящий звонок (либо позвонить другому абоненту) и удержать поступивший вызов до завершения текущего разговора, то есть поочерёдно разговаривать с двумя абонентами.</string>
    <string name="service_missedCall_name"><![CDATA[Вам звонили & Я на связи]]></string>
    <string name="service_missedCall_desc">При подключении нового номера абонентам предоставляется возможность активировать услугу бесплатно. По истечению 30 дней услуга будет тарифицироваться по 84 сум в сутки. Абонентская плата за услугу «Вам звонили / Я на связи» для действующих абонентов - 84 сум в сутки.</string>
    <string name="service_antiAON_name">АнтиАОН</string>
    <string name="service_antiAON_desc">Использование услуги «Антиопределитель номера»: Абонентская плата - 421 сум в день Включение/отключение услуги «Антиопределитель номера» - бесплатно.</string>
    <string name="service_lte4g_name" translatable="false">4G LTE</string>
    <string name="service_lte4g_desc">4G LTE в любой точке города Ташкента! Интернет UMS на 4G LTE скоростях без лишних затрат! Стоимость подключения услуги – 0 сум.</string>
    <string name="service_activeserv_name">Проверка активных услуг</string>
    <string name="service_activeserv_desc">USSD - Команда *140# дает возможность проверить активные услуги.</string>
    <string name="service_international_name">Международные Звонки</string>
    <string name="service_international_desc">Тарифы на международные звонки Центральная Азия (Таджикистан,Казахстан,Туркменистан,Кыргызстан) - 2316 сум, Россия и остальные страны СНГ - 3158 сум, Европа - 6948 сум, Азия - 8632 сум. Остальной мир - 8211 сум.</string>
    <string name="service_family_name" translatable="false">FAMILY</string>
    <string name="service_family_desc">Абонентская плата за пользование услугой - 421 сум в день. Стоимость исходящего звонка абонентам МТС в Российской Федерации, Украине, Белоруссии и Туркменистане, а также VIVACell-MTS в Армении - 1053 сум за минуту разговора.</string>
    <string name="service_super0_name" translatable="false">SUPER 0</string>
    <string name="service_super0_desc">УСЛУГА «Super 0», предназначен для осуществления бесплатных исходящих звонков на сеть мобильного оператора UMS по Республике Узбекистан. Стоимость услуги всего — 4211 сум, снимается в момент активации, при положительном балансе! При подключенной услуге «Super 0», услуга «Конференц-связь» недоступна. Срок действия услуги неограничен.</string>
    <string name="service_internet_helper">Internet yordamchi -  bu Sizning Internet yordamida shaxsiy ma\'lumotlarni olish doimiy imkonini
        beruvchi shaxsiy kabinetingizdir.\n\n\"Internet yordamchi\" quyidagilarning imkonini beradi:\n\nBalans haqida axborotlarni bilish
        \n\n- To\'lovlar tarixini ko\'rish\n- Xizmat ko\'rsatish tarif rejasini o\'zgartirish\n- Qo\'shimcha xizmatlarni ulash/o\'chirib qo\'yish
        \n- Sevimli raqamlarni qo\'shish, o\'zgartirish yoki o\'chirish\n- Kompyuter klaviaturasida matn terib sms xabarlar jo\'natish\n
        \nKompaniya abonent shaxsiy ma\'lumotlarini \"Internet yordamchi\" himoyasi yo\'li bilan maxfiy tutishni ta\'minlaydi. Abonentlar
        tomonidan maxsus USSD buyruq vositasida o\'z telefonida mustaqil parol o\'rnatish ko\'zda tutilgan.</string>
    <string name="minute_packages">Минут и СМС</string>
    <string name="minute_60">60 Минут + 60 смс 4000</string>
    <string name="minute_120">120 Минут + 120 смс 7 000 сум</string>
    <string name="minute_180">180 Минут + 180 смс 10 000 сум</string>
    <string name="minute_300">300 Минут + 300 смс 16 000 сум</string>
    <string name="minute_900">900 Минут + 900 смс 37 000 сум</string>
    <string name="minute_1200">1200 Минут + 1200 смс 45 000 сум</string>
    <string name="minute_1800">1800 Минут + 1800 смс 62 000 сум</string>
    <string name="sms_100" translatable="false">SMS 100\t\t\t4 211 сум</string>
    <string name="sms_300" translatable="false">SMS 300\t\t\t10 105 сум</string>
    <string name="choose_language">Выберите язык</string>
    <string name="banner_ad">НАРУЖНАЯ РЕКЛАМА ПОЗВОНИТЬ</string>
    <string name="banner_ad_number">+99897 4404070</string>
    <string name="ads">Реклама</string>
    <string name="settings_get">Получить настройки интернета</string>
    <string name="turnOnMobileNet">Включить мобильный интернет</string>
    <string name="turnOffMobileNet">Отключить мобильный интернет</string>
    <string name="onNetTurnOff">Отключение пакета OnNet</string>
    <string name="internet_settings">Настройки интернет</string>
    <string name="app_name_ums" translatable="false">Mobiuz</string>
    <string name="dialog_permission_settings">Нужен доступ на вызов</string>
    <string name="dialog_settings">Настройки</string>
    <string name="package_title_info"><![CDATA[
            <p>Для того, чтобы узнать об оставшемся объеме трафика в активированном Internet-пакете, необходимо отправить USSD-команду *102#, или отправить SMS-сообщение с цифрой 3 на номер 616019.</p>
        <p>Стоимость пакета снимается при активации.</p>
        <b>Условия:</b>
	]]>
    </string>
    <string name="package_text_info"><![CDATA[
        <ul>
		<li>&nbsp;&nbsp;&nbsp;Для использования Интернет-пакетов необходимо активировать услугу “Мобильный интернет”, если она была ранее выключена.</li>
		<li>&nbsp;&nbsp;&nbsp;Соответствующий объем включенного трафика может быть использован в течение 30 календарных дней со дня активации пакета, вне зависимости от срока нахождения абонента во временной блокировке в этот период. </li>
		<li>&nbsp;&nbsp;&nbsp;Подключение Интернет-пакетов возможно при условии, что после активации пакета счет абонента должен составлять не менее 0,01 y.e.</li>
		<li>&nbsp;&nbsp;&nbsp;Временной интервал между приобретениями пакетов должен быть не менее 10 минут.</li>
		<li>&nbsp;&nbsp;&nbsp;Во избежание некорректной тарификации после приобретения интернет-пакета перезагрузите телефон, планшет или USB-модем (извлеките из компьютера и вставьте снова).</li>
		<li>&nbsp;&nbsp;&nbsp;Объем всех приобретенных пакетов суммируется, а срок использования продлевается до срока окончания последнего купленного пакета и составляет 30 дней с момента его покупки.</li>
		<li>&nbsp;&nbsp;&nbsp;По окончанию включенного трафика, или истечению срока пакета, трафик тарифицируется согласно установленным тарифам.</li>
		<li>&nbsp;&nbsp;&nbsp;При одновременном наличии неиспользованных мегабайт, начисляемых в рамках тарифного плана и Интернет-пакета, сначала расходуются мегабайты с тарифного плана.</li>
		<li>&nbsp;&nbsp;&nbsp;Условия предоставления пакетов не изменяются при смене плана обслуживания.</li>
		<li>&nbsp;&nbsp;&nbsp;Пакеты действительны только при нахождении абонента в сети ООО «UMS» на территории Узбекистана.</li>
		    <p><b>Цены указаны с учетом всех налогов.<b></p>
	</ul>
	]]>
    </string>
    <string name="appRateBtn">Оценить</string>
    <string name="share_nav">Поделиться</string>
</resources>