<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/settingsGetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:minHeight="60dp"
        android:text="@string/settings_get" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <Button
        android:id="@+id/turnOnMobileNet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:minHeight="60dp"
        android:text="@string/turnOnMobileNet" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <Button
        android:id="@+id/turnOffMobileNet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:minHeight="60dp"
        android:text="@string/turnOffMobileNet" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <Button
        android:id="@+id/onNetTurnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:minHeight="60dp"
        android:text="@string/onNetTurnOff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
</LinearLayout>