<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/view_dialog_bg"
    android:layout_marginHorizontal="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_text_view_bg"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sure_confirm"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_question"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_margin="15dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"/>

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/view_btn_bg"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16sp"
        android:text="@string/cancel"
        app:button_duration="250"
        app:button_scale="0.8"
        app:layout_constraintTop_toBottomOf="@id/tvAsk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnOk"/>

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/btnOk"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/view_btn_bg"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16sp"
        android:text="@string/yes_dialog"
        app:button_duration="250"
        app:button_scale="0.8"
        app:layout_constraintTop_toTopOf="@id/btnCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>