<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="?attr/actionBarSize">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="uz.tillo.umsdealer.Activities.MainActivity"
        tools:showIn="@layout/app_bar_main">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/easterEgg"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:weightSum="1">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="#E3060F"
                    android:paddingLeft="10dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/mobiuz" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="140dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/internetPackageBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_main_internet" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:text="@string/internet_packages"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/balanceBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_main_balance" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/balance"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/tariffsBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_main_tarrif" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="7dp"
                        android:gravity="center_horizontal"
                        android:text="@string/tariffs"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/minutePackageBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_main_minute" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/minute_packages"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/serviceBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_main_service" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="7dp"
                        android:gravity="center_horizontal"
                        android:text="@string/service"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/usefulBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/useful" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/useful"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>
            </LinearLayout>

            <RatingBar
                android:id="@+id/appRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:numStars="5"
                android:stepSize="1.0"
                android:theme="@style/appRatingBarStyle" />

            <Button
                android:id="@+id/appRateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="40dp"
                android:text="@string/appRateBtn" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

